# OtterGameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.ps1  build.sh  setup.bat  setup.ps1  setup.py  setup.sh  vcpkg.json
OtterEngine/: CMakeLists.txt
OtterEngine/Declarations/: EngineCore.h  Logger.h
OtterEngine/Definitions/: EngineCore.cpp  Logger.cpp
OtterEngine/Headers/: EngineCore.h  Logger.h  LoggerMacros.h  OtterPCH.h
OtterEngine/Headers/Core/: Application.h  Assert.h  EngineCore.h  Logger.h  OtterCrashHandler.h  Window.h
OtterEngine/Headers/Events/: Event.h  EventDispatcher.h  WindowCloseEvent.h
OtterEngine/Headers/Rendering/: IRenderer.h  Vertex.h  VulkanRenderer.h
OtterEngine/Headers/Rendering/Vulkan/: VulkanDebugger.h  VulkanMeshLoader.h  VulkanRenderer.h  VulkanTextureLoader.h  VulkanUtility.h
OtterEngine/Headers/Resources/: Mesh.h  Resources.h  Shader.h  Texture.h
OtterEngine/Headers/Utils/: IMeshLoader.h  ITextureLoader.h  OtterIO.h  PathFormat.h  TypeID.h
OtterEngine/Modules/: EngineCore.ixx  Logger.ixx
OtterEngine/OtterEngine.dir/Debug/OtterEngine.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  OtterEngine.lastbuildstate
OtterEngine/Shaders/: triangle.vert
OtterEngine/Source/: EngineCore.cpp  Logger.cpp
OtterEngine/Source/Core/: Application.cpp  EngineCore.cpp  Logger.cpp  OtterCrashHandler.cpp  Window.cpp
OtterEngine/Source/Rendering/: VulkanRenderer.cpp
OtterEngine/Source/Rendering/Vulkan/: VulkanDebugger.cpp  VulkanMeshLoader.cpp  VulkanRenderer.cpp  VulkanTextureLoader.cpp  VulkanUtility.cpp
OtterEngine/Source/Resources/: Mesh.cpp  Texture.cpp
OtterEngine/Source/Utils/: OtterIO.cpp
OtterPlayground/: CMakeLists.txt  main.cpp
OtterPlayground/Source/: main.cpp
OtterStudio/: CMakeLists.txt
OtterStudio/InternalResources/Icons/: OtterStudioIcon.icns
OtterStudio/Source/: main.cpp
OtterStudio/StudioLib/: CMakeLists.txt
OtterStudio/StudioLib/Declarations/: StudioApp.h
OtterStudio/StudioLib/Definitions/: StudioApp.cpp
OtterStudio/StudioMain/: CMakeLists.txt  StudioMain.cpp
